msg text align fix attempt1

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -47,14 +47,17 @@
 .msg {
     background-color: #14213D;
     color: #E5E5E5;
+    text-align: center;
 }
 
 .msg h2 {
     color: #FCA311;
+    text-align: center;
 }
 
 .msg p {
     color: #E5E5E5;
+    text-align: center;
 }
 
 .logo{
